fix some small bugs to pass openapi validation
